--- a/project_1.html
+++ b/project_1.html
@@ -11,16 +11,22 @@
 
     <div class="title">
         todos
-     </div>
+    </div>
     <div>
         <div class="toggle-all">
         </div>
-        <input class="input" type="text" placeholder="What needs to be done?">
+        <input id="input" class="input" type="text" placeholder="What needs to be done?">
     </div>
     <div>
         <ul id="todoList">
-        <li><label>Buy Clothes</label><button class="delete">X</button></li>
-        <li><label>SHOPPING</label><button class="delete">X</button></li>
+            <li>
+                <label>Buy Clothes</label>
+                <button class="delete">X</button>
+            </li>
+            <li>
+                <label>SHOPPING</label>
+                <button class="delete">X</button>
+            </li>
     </div>
 
     <button id="addBtn">Add</button>
